tests/sksl/errors/UnscopedVariableInElse.glsl
### Compilation failed:

error: 2: variable 'unused' must be created in a scope
1 error
